# serializer version: 1
# name: test_FBCNN_color
  ImageModelDescriptor(
    architecture=FBCNNArch(
      id='FBCNN',
      name='FBCNN',
    ),
    input_channels=3,
    model_bytes=287687184,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_FBCNN_gray
  ImageModelDescriptor(
    architecture=FBCNNArch(
      id='FBCNN',
      name='FBCNN',
    ),
    input_channels=1,
    model_bytes=287677960,
    output_channels=1,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
